# Man-Jun

./: README.md
RedeMe/: FreeRdp常规登录-操作手册.doc  Winodws-mstsc(相关功能参考对比).docx  工作总结以及明细.txt  音视频重定向需求.txt
openh264-openh264v2.1.1/: build.bat
openh264-openh264v2.1.1/buildder/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json
openssl-OpenSSL_1_1_1h/: pax_global_header
openssl-OpenSSL_1_1_1h/openssl-OpenSSL_1_1_1h/: configdata.pm  libcrypto.exp  libssl-1_1-x64.ilk  libssl.exp  libssl_static.lib  makefile
platform/: ALL_BUILD.vcxproj  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  FreeRDP.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  buildflags.h  cmake_install.cmake  config.h
platform/Debug/: audin-client-winmm.lib  audin-client.lib  cliprdr-client.lib  disp-client.lib  drdynvc-client.lib  drive-client.lib  echo-client.lib  encomsp-client.lib  freerdp-client2.exp  freerdp-client2.ilk  freerdp-client2.lib  freerdp2.exp  freerdp2.ilk  freerdp2.lib  geometry-client.lib  printer-client-win.lib  printer-client.lib  rail-client.lib  rdp2tcp-client.lib  rdpdr-client.lib  rdpei-client.lib  rdpgfx-client.lib  rdpsnd-client-fake.lib  rdpsnd-client-winmm.lib  rdpsnd-client.lib  rdtk.lib  remdesk-client.lib  smartcard-client.lib  urbdrc-client-libusb.lib  urbdrc-client.lib  video-client.lib  wfreerdp.exp  wfreerdp.ilk  winpr-hash.ilk  winpr-makecert.ilk  winpr-tools2.exp  winpr-tools2.ilk  winpr-tools2.lib  winpr2.exp  (+2 more)
tool-install/TOP-Viewer/top-viewer-1.0/adp-bugfix/virt-viewer/icons/48x48/: Makefile.am
(+1958 files in other folders)
